# diet_diary

./: README.md  calories.db  docker-compose.yml  package-lock.json  pyproject.toml  record.json  requirements.txt  sql_app.db
DietDiary/: CHANGELOG  LICENSE  README.rst  pyproject.toml
DietDiary/src/DietDiary/: __main__.py  app.py  food_calories.py
backend/: .dockerignore  Dockerfile  app.py  database.py  food_data.py  main.py  models.py  requirements.txt  sql_app.db
frontend/: Dockerfile  api.js  package-lock.json  package.json
frontend/frontendApp/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
src/diet_diary/: __init__.py  __main__.py  app.py
src/diet_diary/resources/: README
tests/: diet_diary.py  test_app.py
